--- a/src/app/components/dashboard/dashboard-card/card-item-menu/card-item-menu.component.html
+++ b/src/app/components/dashboard/dashboard-card/card-item-menu/card-item-menu.component.html
@@ -6,15 +6,15 @@
 
 <div (mouseleave)="onMouseLeave()" class="popup-container">
   <div *ngIf="isHover" class="popup">
-    <div (click)="runEvent.emit()" class="popup-item">
+    <div *ngIf="isRunnable" (click)="runEvent.emit()" class="popup-item">
       <img src="assets/icons/game-icon.svg">
       <span>Run</span>
     </div>
-    <div (click)="editEvent.emit()" class="popup-item">
+    <div *ngIf="isEditable" (click)="editEvent.emit()" class="popup-item">
       <img src="assets/icons/add-icon.svg">
       <span>Edit</span>
     </div>
-    <div (click)="deleteEvent.emit()" class="popup-item">
+    <div *ngIf="isDeletable" (click)="deleteEvent.emit()" class="popup-item">
       <img src="assets/icons/delete-icon.svg">
       <span>Delete</span>
     </div>
