--- a/src/app/components/run-game-night/game-round-score/team-emoji-picker/team-emoji-picker.component.scss
+++ b/src/app/components/run-game-night/game-round-score/team-emoji-picker/team-emoji-picker.component.scss
@@ -5,6 +5,9 @@
   align-items: center;
   justify-content: center;
 
+  img{
+    cursor: pointer;
+  }
   .emojis-container{
     left: 100px;
     position: absolute;
