--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,6 +11,10 @@
     flex-direction: row;
     align-items: center;
     gap: .5rem;
+
+    .logout-icon{
+      cursor: pointer;
+    }
   }
 
   .logo{
